--- a/Lifting Progress Tracker/Lifting Progress Tracker/Base.lproj/Main.storyboard
+++ b/Lifting Progress Tracker/Lifting Progress Tracker/Base.lproj/Main.storyboard
@@ -3564,10 +3564,10 @@ If you feel that we are not abiding by this privacy policy, you should contact u
         </namedColor>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="h7A-Ol-GTm"/>
+        <segue reference="i3l-Lx-zz9"/>
         <segue reference="8vi-zY-lgH"/>
         <segue reference="hpc-Ab-PF1"/>
-        <segue reference="Yck-cD-gnZ"/>
+        <segue reference="DWD-18-ESU"/>
         <segue reference="sli-L6-W8f"/>
         <segue reference="s3N-OQ-DDl"/>
         <segue reference="gHT-g5-Cs5"/>
