--- a/Lifting Progress Tracker/Lifting Progress Tracker/Base.lproj/Main.storyboard
+++ b/Lifting Progress Tracker/Lifting Progress Tracker/Base.lproj/Main.storyboard
@@ -1291,7 +1291,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <searchBar key="tableHeaderView" multipleTouchEnabled="YES" contentMode="redraw" placeholder="#Tags" id="yNI-SJ-hUt">
+                        <searchBar key="tableHeaderView" multipleTouchEnabled="YES" contentMode="redraw" misplaced="YES" placeholder="#Tags" id="yNI-SJ-hUt">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <textInputTraits key="textInputTraits" autocorrectionType="no" enablesReturnKeyAutomatically="YES"/>
@@ -2513,7 +2513,7 @@ If you feel that we are not abiding by this privacy policy, you should contact u
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ey2-60-wuM">
                                 <rect key="frame" x="16" y="143.5" width="343" height="324"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Data" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4z2-jw-H6J">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Workout" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4z2-jw-H6J">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="48"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -2671,7 +2671,7 @@ If you feel that we are not abiding by this privacy policy, you should contact u
                         <outlet property="DataInputField" destination="kde-fp-LJY" id="jEi-Fh-9L0"/>
                         <outlet property="DatePicker" destination="DWd-jR-8Ox" id="Xxo-kk-wLx"/>
                         <outlet property="FeedbackTextBox" destination="ugE-Fr-MAr" id="JAB-bx-OtT"/>
-                        <outlet property="MedicationInput" destination="jdx-dm-vOf" id="phm-9p-Sz3"/>
+                        <outlet property="RepsInput" destination="jdx-dm-vOf" id="hFA-iN-CjD"/>
                         <outlet property="RoundedView" destination="ey2-60-wuM" id="74N-uZ-G1M"/>
                         <outlet property="SubmitFeedback" destination="upR-4z-vUh" id="oo3-Vf-bSf"/>
                         <outlet property="TagInputBox" destination="UZM-gr-JNp" id="Tcr-Zu-Ykf"/>
